fixed to keep whitespace in textarea
white-space:pre-wrap;
preserve whitespace and newline

--- a/css/main_blog.css
+++ b/css/main_blog.css
@@ -81,7 +81,7 @@
 	width: 100%;
 	display: flex;
 	padding-right: 38px;
-	white-space: pre-line;
+	white-space:pre-wrap;
 }
 
 .blog_img {
